# pytradingview

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  python-publish.yml
examples/: example_app.py  minute_candles_console.py  quote_prices_console.py
pytradingview/: __init__.py  __main__.py  auth.py  chart.py  client.py  protocol.py  quote.py
tests/: test_auth.py  test_chart_session.py  test_cli.py  test_client.py  test_protocol.py  test_quote.py  test_utils.py
